--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,9 @@
 
     <FrameLayout
         android:id="@+id/bottom_frame"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="92dp"
         android:layout_gravity="bottom"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
         android:background="@color/colorPrimary"
         app:layout_anchor="@+id/top_frame"
         app:layout_anchorGravity="bottom"
@@ -32,6 +30,5 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_frame"
         app:layout_constraintVertical_bias="0.0"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
