--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -16,22 +16,37 @@
 
         <EditText
             android:id="@+id/userName"
-            android:layout_width="368dp"
+            android:layout_width="300dp"
             android:layout_height="70dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name"
-            android:gravity="center"
-            android:background="@drawable/rounded_corners"
-            android:textColor="@color/LightGreen"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_corners"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="textPersonName"
+            android:text="User Name"
+            android:textColor="@color/LightGreen"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/enterUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Enter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/userName"
+            app:layout_constraintRight_toRightOf="@+id/userName"
+            app:layout_constraintTop_toBottomOf="@+id/userName"
+            app:layout_constraintVertical_bias="0.128" />
 
     </android.support.constraint.ConstraintLayout>
 
