--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xixia.remembersonglyrics.UI.UserNameFragment">
+    tools:context="com.xixia.remembersonglyrics.UI.EmailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.constraint.ConstraintLayout
@@ -15,7 +15,7 @@
         >
 
         <EditText
-            android:id="@+id/userName"
+            android:id="@+id/emailAddress"
             android:layout_width="300dp"
             android:layout_height="70dp"
             android:layout_marginBottom="8dp"
@@ -25,8 +25,8 @@
             android:background="@drawable/rounded_corners"
             android:ems="10"
             android:gravity="center"
-            android:inputType="textPersonName"
-            android:hint="User Name"
+            android:inputType="textEmailAddress"
+            android:hint="Email Address"
             android:textColor="@color/LightGreen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/acceptUserName"
+            android:id="@+id/acceptEmailAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -43,9 +43,9 @@
             android:layout_marginTop="8dp"
             android:text="Enter"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/userName"
-            app:layout_constraintRight_toRightOf="@+id/userName"
-            app:layout_constraintTop_toBottomOf="@+id/userName"
+            app:layout_constraintLeft_toLeftOf="@+id/emailAddress"
+            app:layout_constraintRight_toRightOf="@+id/emailAddress"
+            app:layout_constraintTop_toBottomOf="@+id/emailAddress"
             app:layout_constraintVertical_bias="0.128" />
 
     </android.support.constraint.ConstraintLayout>
